📈🎰 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -69,6 +69,46 @@
     <div>
       <hr class="line-break" />
     </div>
+    <div class="third-image">
+      <h3 style="font-size: 50px">
+        Sources
+      </h3>
+      <div class="source">
+        <p>
+          Jxmmy Highroller: Aside from some outrageous sports takes and
+          ludicrous graphics, this Youtuber kills it in terms of insane NBA
+          facts.
+        </p>
+        <a href="https://www.youtube.com/user/andergra000"
+          >Check him out here!</a
+        >
+      </div>
+      <hr />
+      <div class="source">
+        <p>
+          My Uncle A: While he is very bias to old school players, I can't deny
+          that he's a wealth of information in regards to sports stats. No link
+          for him, just let me know if you want to speak with him.
+        </p>
+      </div>
+      <hr />
+      <div class="source">
+        <p>
+          Colin Cowherd: Has no idea what he is talking about in regards to
+          basketball, but is a football wizard.
+        </p>
+        <a href="https://www.youtube.com/channel/UCFDidMd82mpDkKijLUqHp7A"
+          >Find him here!</a
+        >
+      </div>
+      <hr />
+      <div class="source">
+        <p>
+          My friend Sam: Like myself, he has spent countless hours scouring
+          reference pages to find some of the most amazing stats.
+        </p>
+      </div>
+    </div>
     <div class="footer">
       <p>
         Copyright &copy; 2020 Benny Albergo
